# english-grammar-agent

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  models.py  scheduler.py  schemas.py
app/routes/: admin.py  feishu.py
app/services/: agent.py  content.py  feishu.py  llm.py  progress.py  quiz.py  review.py
deploy/: env.production.example  grammar-agent.service  nginx.grammar-agent.conf
docs/: deploy-server.md
examples/: lessons.sample.json
scripts/: import_lessons.py
tests/: conftest.py  test_learning_flow.py
