[project]
name = "english-grammar-agent"
version = "0.1.0"
description = "Feishu-based English grammar learning agent with daily lessons, quizzes, and spaced review."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "apscheduler>=3.10.4",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.59.0",
  "pydantic-settings>=2.6.0",
  "python-dotenv>=1.0.1",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
