[project]
name = "english-grammar-agent"
version = "0.1.0"
description = "Feishu-based English grammar learning agent with daily lessons, quizzes, and spaced review."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "apscheduler==3.11.0",
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "openai==1.59.9",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "sqlmodel==0.0.22",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.3",
  "ruff==0.9.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["deploy*", "docs*", "examples*", "scripts*", "tests*"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
